Dark mode fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
 @import 'tailwindcss';
 @plugin "daisyui" {
-  themes: all;
+  themes:
+    caramellatte --default,
+    luxury --prefersdark;
 }
 
 :root {
